# mood_game

./: .gitignore  README.md  cal
0/: 3.py
20240219/0/: 1.py  2.py  3.py
20240219/1/: prog.py
20240226/0/: cows.py  cows_love.py
20240226/1/: prog.py
20240226/1/check/: 1.in
20240226/2/: prog.py
20240303/0/: 2.py
20240303/1/: Pipfile  prog.py
20240311/: com.py
20240311/1/: prog.py  prog_BACKUP_232975.py  prog_REMOTE_232975.py
20240318/0/: 0001-homework.patch  0002-fix.patch  cal1  cal2  calnew.patch  prog.py  server.py
20240318/1/: client.py  prog.py  server.py
20240318/1/patchdir/: 0001-added-server.patch  0002-added-class-GameState.patch  0003-added-client.patch  0004-fixed-bugs.patch
20240324/0/: 1.py
20240325/0/: prog.py
20240325/1/: client _demo.py  client.py  demo.py  server.py  server_demo .py
20240401/1/: client.py  server.py
20240401/2/: .flake8  .flate8  1.py  2.py  Pipfile
20240401/mood/server/: __main__.py
20240408/: index.rst  pr1.py
20240408/0/: API.rst  calend.rst  conf.py  restcalend.py  sayer.py
20240408/0/1/: API.rst  conf.py  index.rst
20240408/1/: .flake8
20240408/1/docs/: API.rst  conf.py  index.rst
20240408/2/: Pipfile  ans.txt  test.mood
20240408/2/docs/: conf.py
20240408/2/mood and doc/: test.mood  test_check.txt
20240415/0/po/: wcout.py
20240415/0/test/: 1.py  messages.pot
20240422/0/: 2.py  Scroots.py  test_Sqroots.py
20240422/1/mood/: .doit.db  .gitignore  Pipfile  test.py
20240422/2/mood/: test.py
20240427/0/: Pipfile  dodo.py  wc.py
20240427/1/mood/: .doit.db  Pipfile  dodo.py  test.py
20240513/0/mood/: .doit.db  1.py  Pipfile  test.py
20240513/1/mood/: .doit.db  Pipfile  dodo.py
20240513/1/mood/moodclient/: pyproject.toml
20240513/1/mood/moodclient/MooClient.egg-info/: PKG-INFO
20240513/1/mood/moodserver/: pyproject.toml
20240513/1/mood/moodserver/MooServer.egg-info/: PKG-INFO
20240513/1/mood/moodserver/moodserver/: __init__.py  server.pot
22040415/0/: wcout.pot
demo/: .flake8  .flakе8  pyproject.toml  test.mood
demo/mood.egg-info/: PKG-INFO  SOURCES.txt
demo/mood/client/: __init__.py  client_tests.py
demo/mood/server/: server_tests.py
demo/po/ru_RU.UTF-8/LC_MESSAGES/: mood.po
game/: .flake8  Pipfile
game/docs/source/: conf.py  index.rst
game/mood/: __init__.py
(+121 files in other folders)
