[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "mood"
version = "1.0.0"
dependencies = [
    "python-cowsay",
]
authors = [
    {name = "Maria B", email = "maria.burdugova@mail.ru"},
]
description = "MOOD"

[tool.setuptools.package-dir]
mood = "mood"


[project.scripts]
client = "mood.client.__main__:start_client"
server = "mood.server.__main__:main"


